--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
         completions."
     </string>
     <string name="findroid">FINDROID</string>
+    <string name="sign_up"><u>Sign Up</u></string>
 </resources>
