Authorisation and registration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     </string>
     <string name="findroid">FINDROID</string>
     <string name="sign_up"><u>Sign Up</u></string>
+    <string name="incorrect_user">User was\'t found</string>
 </resources>
