added rectangle drawing Crashing on 340 :(

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,16 +16,19 @@
     <string name="findroid">FINDROID</string>
     <string name="sign_up"><u>Sign Up</u></string>
     <string name="incorrect_user">User was\'t found</string>
-    <!-- Sities-->
-    <string name="city_Moscow">Go Moscow</string>
-    <string name="city_Penza">Go Penza</string>
-    <string name="city_Sochi">Go Sochi</string>
-    <string name="city_Volgograd">Go Volgograd</string>
-    <string name="city_Kazan">Go Kazan</string>
-    <string name="city_Chelyabinsk">Go Chelyabinsk</string>
+    <!-- Sities -->
+    <string name="city_Moscow">Moscow</string>
+    <string name="city_Penza">Penza</string>
+    <string name="city_Sochi">Sochi</string>
+    <string name="city_Volgograd">Volgograd</string>
+    <string name="city_Kazan">Kazan</string>
+    <string name="city_Chelyabinsk">Chelyabinsk</string>
+    <string name="city_Berlin">Berlin</string>
+    <string name="city_London">London</string>
 
     <!-- Voice captions -->
     <string name="kws_caption">To start say \"Start\".</string>
     <string name="menu_caption">Say \"go\" to give robot the distanation</string>
+    <string name="praparing_recognizer">Preparing the recognizer</string>
 
 </resources>
