added 'log out'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_help">Shop</string>
+    <string name="menu_log_out">Log out</string>
     <string name="menu_exit">Exit</string>
 
     <!-- TODO: Remove or change this placeholder text -->
